# codex-account-switcher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-04-codex-account-switcher.md  2026-04-04-public-readme-and-repo-release.md  2026-04-05-account-import-export.md  2026-04-08-account-usage-ux.md  2026-04-08-account-usage.md  2026-04-09-account-usage-live-view.md  2026-04-09-account-usage-networking.md
docs/superpowers/specs/: 2026-04-04-codex-account-switcher-design.md  2026-04-04-public-readme-and-repo-release-design.md  2026-04-05-account-import-export-design.md  2026-04-08-account-usage-design.md  2026-04-08-account-usage-rendering-and-concurrency-design.md  2026-04-09-account-usage-reliability-and-live-view-design.md
openspec/: config.yaml
openspec/changes/add-account-usage/: proposal.md  tasks.md
openspec/changes/add-account-usage-live-view/: tasks.md
openspec/changes/harden-account-usage-networking/: design.md  tasks.md
openspec/changes/improve-account-usage-ux/: proposal.md  tasks.md
openspec/specs/account-snapshots/: spec.md
openspec/specs/account-switching/: spec.md
openspec/specs/account-transfer/: spec.md
src/codex_auth/: cli.py  codex_cli.py  errors.py  models.py  prompts.py  service.py  store.py  token_refresh.py  transfer.py  usage_api.py  validators.py
tests/: test_cli_admin_commands.py  test_cli_read_commands.py  test_cli_smoke.py  test_cli_transfer_commands.py  test_project_files.py  test_service.py  test_store.py  test_transfer.py  test_usage_api.py  test_validators.py
(+22 files in other folders)
