[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-account-switcher"
version = "0.1.0"
description = "Manage multiple local Codex auth.json snapshots"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
codex-auth = "codex_auth.cli:main"

[dependency-groups]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_auth"]
